[gd_scene load_steps=2 format=3 uid="uid://cvoffsvhv3pis"]

[ext_resource type="Script" uid="uid://2y1rv3aqaipy" path="res://game_settings.gd" id="1_eu2yq"]

[node name="Panel" type="Panel"]
offset_left = -20.2
offset_top = -9.2
offset_right = 19.8
offset_bottom = 30.8
tooltip_text = "khgv"
script = ExtResource("1_eu2yq")

[node name="VBoxContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(0.155, 0)
layout_mode = 0
offset_left = 2.10001
offset_top = 2.3
offset_right = 302.1
offset_bottom = 148.3
scale = Vector2(0.121, 0.121)
columns = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "fps"

[node name="Limit Fps" type="HSlider" parent="VBoxContainer" groups=["slide"]]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
min_value = 15.0
max_value = 120.0
step = 15.0
value = 15.0
tick_count = 8
ticks_on_borders = true

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Mouse Sensitivity:"

[node name="Mouse Sensitivity" type="HSlider" parent="VBoxContainer" groups=["slide"]]
layout_mode = 2
size_flags_vertical = 4
min_value = 100.0
max_value = 200.0
step = 20.0
value = 160.0
tick_count = 3

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Joystick sensitivity:"

[node name="Joystick Sensitivity" type="HSlider" parent="VBoxContainer" groups=["slide"]]
layout_mode = 2
size_flags_vertical = 4
max_value = 10.0
value = 5.0
tick_count = 3

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Physics Fps"

[node name="Physics Fps" type="HSlider" parent="VBoxContainer" groups=["slide"]]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
min_value = 15.0
max_value = 120.0
step = 15.0
value = 15.0
tick_count = 8
ticks_on_borders = true

[node name="Label5" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Resolution"

[node name="Resolution" type="HSlider" parent="VBoxContainer" groups=["slide"]]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
min_value = 15.0
max_value = 120.0
step = 15.0
value = 15.0
tick_count = 8
ticks_on_borders = true

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 9.2
offset_top = 33.2
offset_right = 128.2
offset_bottom = 64.2
scale = Vector2(0.17937, 0.171688)
text = "Default values"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 9.2
offset_top = 43.2
offset_right = 133.2
offset_bottom = 74.2
scale = Vector2(0.17937, 0.171688)
text = "Render Quality"

[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_up" from="Button3" to="." method="_on_button_3_button_up"]
